--- a/package.json
+++ b/package.json
@@ -2,19 +2,26 @@
   "name": "clean-architecture",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/main.js",
   "scripts": {
     "main": "tsc && node ./dist/main",
-    "test": "tsc && jest ./dist/test"
+    "test": "tsc && jest ./dist/test",
+    "runpsql": "psql -d postgres -U postgres",
+    "createSQL": "psql -d app -f create.sql"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/jest": "^29.4.0",
-    "jest": "^29.4.3",
-    "ts-jest": "^29.0.5",
+    "@types/express": "^4.17.17",
+    "@types/jest": "^29.2.3",
+    "axios": "^1.1.3",
+    "express": "^4.18.2",
+    "jest": "^29.3.1",
+    "nodemon": "^2.0.20",
+    "pg-promise": "^10.15.1",
+    "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.5"
+    "typescript": "^4.8.4"
   }
 }
